--- a/Dashboard.ipynb
+++ b/Dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
     "\n",
     "#Insertar la imagen en sidebar\n",
     "#URL of the image\n",
-    "image = \"https://cdn5.travelconline.com/unsafe/fit-in/2000x0/filters:quality(75):strip_metadata():format(webp)/https%3A%2F%2Ftr2storage.blob.core.windows.net%2Fimagenes%2FCepFu9RAtqVN-YZCPyV6ulrjpeg.jpeg\"  \n",
+    "image = \"https://www.vice.com/wp-content/uploads/sites/2/2024/07/1408551938bc55r.gif\"  \n",
     "st.sidebar.image(image, use_column_width=True)\n",
     "\n",
     "\n",
@@ -93,11 +93,8 @@
     "\n",
     "if Frames == \"Portada\":\n",
     "    #Mostrar imágenes o gifs\n",
-    "    image_list = [\n",
-    "        (\"imagen1.jpeg\", \"Tokyo\"),\n",
-    "        (st.markdown(\"![TOKYO](https://i.pinimg.com/originals/2a/7f/79/2a7f796fb55b5557b381d800af60735d.gif)\"))    \n",
-    "    ]\n",
-    "    button=st.sidebar.button(label=\"APRIETAME VAMOS\")\n",
+    "    st.markdown(\"![TOKYO](https://i.pinimg.com/originals/2a/7f/79/2a7f796fb55b5557b381d800af60735d.gif)\")\n",
+    "    button=st.sidebar.button(label=\"APRIÉTAME\")\n",
     "    if button:\n",
     "        st.markdown(\"\"\" \n",
     "            <div style='text-align:justified;'>\n",
@@ -111,10 +108,10 @@
     "\n",
     "\n",
     "    # Crear columnas para mostrar las imágenes en una distribución de 3 columnas\n",
-    "    cols = st.columns(3)  # Crea 3 columnas para las imágenes\n",
-    "    for i, (img_path, caption) in enumerate(image_list):\n",
-    "        with cols[i]:\n",
-    "            st.image(img_path, caption=f\"{caption}\", use_column_width=True)    \n",
+    "        cols = st.columns(3)  # Crea 3 columnas para las imágenes\n",
+    "        for i, (img_path, caption) in enumerate(image_list):\n",
+    "            with cols[i]:\n",
+    "                st.image(img_path, caption=f\"{caption}\", use_column_width=True)    \n",
     "##############################################################################################################################\n",
     "\n",
     "#Regresion lineal simple\n",
